--- a/themes/custom/mha/css/global.css
+++ b/themes/custom/mha/css/global.css
@@ -427,3 +427,9 @@ h2.pane-title,
 .view-id-elton_house_award.view-display-id-page .views-row{
 	margin-bottom: 20px;
 }
+#block-widgets-s-socialmedia-profile-buttons{
+	float: right;
+}
+#block-block-4 p{
+	color: #fff;
+}
