--- a/themes/custom/mha/css/global.css
+++ b/themes/custom/mha/css/global.css
@@ -440,3 +440,12 @@ h2.pane-title,
 tr:hover{
 	background: none;
 }
+
+.block-mha-news-author img{
+	float: left;
+	margin-right: 5px;
+}
+
+.block-mha-news-author{
+	margin-bottom: 20px;
+}
