--- a/themes/custom/mha/css/global.css
+++ b/themes/custom/mha/css/global.css
@@ -449,3 +449,38 @@ tr:hover{
 .block-mha-news-author{
 	margin-bottom: 20px;
 }
+.view-id-events.view-display-id-block .views-row,
+.view-id-news.view-display-id-block .views-row{
+	margin-bottom: 15px;
+	padding-bottom: 10px;
+	border-bottom: 1px solid #ccc;
+}
+.view-id-news.view-display-id-page .attachment-before .views-row{
+	padding: 0;
+	z-index: -100;
+	height: 305px;
+	position: relative;
+}
+.view-id-news.view-display-id-page .attachment-before .views-row img{
+	position: absolute;	
+}
+.view-id-news.view-display-id-page .attachment-before .views-row .views-field-title a{
+	background: #fff;
+	padding: 10px;
+	font-size: 1.5em;
+	text-decoration: none;
+	top: 10px;
+	position: absolute;
+	opacity: 0.85;
+	filter: alpha(opacity=85);
+}
+
+.view-id-news.view-display-id-page .attachment-before .views-row .views-field-body{
+	position: absolute;
+	top: 60px;
+	background: #FFF;
+	width: 250px;
+	padding: 5px;
+	opacity: 0.85;
+	filter: alpha(opacity=85);
+}
