some style for the image galleries

--- a/themes/custom/mha/css/global.css
+++ b/themes/custom/mha/css/global.css
@@ -525,3 +525,7 @@ tr:hover{
 	padding: 10px;
 	background: #AF1E2D;
 }
+.view-id-image_gallery.view-display-id-block_1 .views-row{
+	padding: 5px 0;
+	border-bottom: 1px solid #ccc;
+}
