stopped the annoying omega table row stuff

--- a/themes/custom/mha/css/global.css
+++ b/themes/custom/mha/css/global.css
@@ -604,5 +604,9 @@ tr:hover{
 	text-decoration: underline;
 }
 
-
+tr:hover td,
+tr.even:hover td.active,
+tr.odd:hover td.active {
+	background: none;
+}
 
