some more style for the twitter block

--- a/themes/custom/mha/css/global.css
+++ b/themes/custom/mha/css/global.css
@@ -630,7 +630,7 @@ tr.odd:hover td.active {
 .pane-latest-tweetsa:visited{
 	color: #fff;
 }
-.panel-separator{
+.front .panel-3col-33-stacked .panel-separator{
 	margin: 0;
 }
 
