--- a/themes/custom/mha/css/mha-alpha-default-narrow.css
+++ b/themes/custom/mha/css/mha-alpha-default-narrow.css
@@ -2,3 +2,6 @@
 /* If you are using the default media queries provided by Omega, these styles will also
  *  apply to the normal and widescreen layouts. You may override these styles in the normal 
  *  and widescreen CSS files as appropriate. */
+.pane-hero-widget {
+  display: none;
+}
