--- a/themes/custom/mha_res/css/screen.css
+++ b/themes/custom/mha_res/css/screen.css
@@ -88,153 +88,210 @@ body {
     color: #fff; }
 
 /* line 36, ../sass/screen.scss */
+.region-sidebar-second h2.block-title {
+  margin: -19px -19px 0px -19px;
+  background: #B01C2E;
+  padding: 19px;
+  color: #fff; }
+
+/* line 44, ../sass/screen.scss */
 .region-sidebar-first h2.block-title {
   margin: -19px -19px 0px -19px;
   background: #B01C2E;
   padding: 19px;
   color: #fff; }
-/* line 43, ../sass/screen.scss */
+/* line 51, ../sass/screen.scss */
 .region-sidebar-first ul li {
   padding: 10px 0px;
   border-bottom: 1px #e3e3e3 solid; }
+/* line 57, ../sass/screen.scss */
+.region-sidebar-first .view-display-id-block_1 .views-row {
+  padding: 10px 0px;
+  border-bottom: 1px #e3e3e3 solid; }
 
-/* line 49, ../sass/screen.scss */
+/* line 63, ../sass/screen.scss */
 p {
   margin-bottom: 1em; }
 
-/* line 52, ../sass/screen.scss */
+/* line 66, ../sass/screen.scss */
 #block-mha-news-mha-news-author {
   margin-bottom: 20px;
   font-size: 0.9em;
   border-bottom: 1px #eee solid;
   border-top: 1px #eee solid;
   padding: 10px 0; }
-  /* line 53, ../sass/screen.scss */
+  /* line 67, ../sass/screen.scss */
   #block-mha-news-mha-news-author img {
     float: left;
     margin-right: 10px; }
-  /* line 57, ../sass/screen.scss */
+  /* line 71, ../sass/screen.scss */
   #block-mha-news-mha-news-author .position {
     margin-bottom: 1em;
     font-weight: bold; }
-  /* line 61, ../sass/screen.scss */
+  /* line 75, ../sass/screen.scss */
   #block-mha-news-mha-news-author .date {
     font-weight: bold;
     color: #B01C2E; }
 
-/* line 71, ../sass/screen.scss */
+/* line 85, ../sass/screen.scss */
 .footer {
   background: transparent url("../images/whitelogo.png") bottom right no-repeat; }
 
-/* line 74, ../sass/screen.scss */
+/* line 88, ../sass/screen.scss */
 .region.region-sidebar-first.well {
   padding-top: 0; }
 
-/* line 77, ../sass/screen.scss */
+/* line 91, ../sass/screen.scss */
 .navbar-full {
   background: #161B20;
   margin-bottom: 20px; }
-  /* line 80, ../sass/screen.scss */
+  /* line 94, ../sass/screen.scss */
   .navbar-full .container {
     padding: 0; }
-    /* line 82, ../sass/screen.scss */
+    /* line 96, ../sass/screen.scss */
     .navbar-full .container a {
       color: #fff; }
-    /* line 85, ../sass/screen.scss */
+    /* line 99, ../sass/screen.scss */
     .navbar-full .container a:hover {
       color: #000; }
 
-/* line 91, ../sass/screen.scss */
+/* line 105, ../sass/screen.scss */
 .front .navbar-full {
   margin-bottom: 0; }
-/* line 94, ../sass/screen.scss */
+/* line 108, ../sass/screen.scss */
 .front .view-latest-tweets {
   background: #161B20 url("../images/Twitter_logo_white.png") 10px 10px no-repeat;
   padding: 13px 0 13px 50px;
   margin-bottom: 20px;
   color: #fff; }
-  /* line 99, ../sass/screen.scss */
+  /* line 113, ../sass/screen.scss */
   .front .view-latest-tweets a {
     color: #fff;
     text-decoration: underline;
     font-size: 0.9em; }
-  /* line 104, ../sass/screen.scss */
+  /* line 118, ../sass/screen.scss */
   .front .view-latest-tweets span {
     width: 100%;
     font-size: 0.9em; }
-/* line 110, ../sass/screen.scss */
+/* line 124, ../sass/screen.scss */
 .front .main-container h2 {
   font-size: 1.5em;
   background: #B01C2E;
   padding: 10px;
   color: #fff; }
-/* line 119, ../sass/screen.scss */
+/* line 133, ../sass/screen.scss */
 .front .pane-events .views-row,
 .front .pane-news .views-row {
   border-bottom: 1px solid #ddd;
   padding: 20px 0px;
   margin-bottom: 20px; }
-/* line 124, ../sass/screen.scss */
+/* line 138, ../sass/screen.scss */
 .front .pane-events .views-row:first-child,
 .front .pane-news .views-row:first-child {
   padding-top: 0; }
-/* line 127, ../sass/screen.scss */
+/* line 141, ../sass/screen.scss */
 .front .pane-events .views-field-title,
 .front .pane-news .views-field-title {
   padding: 10px 0; }
-  /* line 129, ../sass/screen.scss */
+  /* line 143, ../sass/screen.scss */
   .front .pane-events .views-field-title a,
   .front .pane-news .views-field-title a {
     font-size: 1.3em;
     color: #B01C2E; }
 
-/* line 136, ../sass/screen.scss */
+/* line 150, ../sass/screen.scss */
 .view-display-id-attachment_1 {
   margin-bottom: 20px;
   padding-bottom: 20px;
   border-bottom: 1px solid #ddd; }
 
-/* line 143, ../sass/screen.scss */
+/* line 157, ../sass/screen.scss */
 .views-bootstrap-grid-plugin-style .views-field-title a {
   font-family: Georgia, "Times New Roman", Times, serif;
   color: #B01C2E;
   font-size: 1.2em; }
-/* line 149, ../sass/screen.scss */
+/* line 163, ../sass/screen.scss */
 .views-bootstrap-grid-plugin-style .col {
   margin-bottom: 30px; }
 
-/* line 153, ../sass/screen.scss */
+/* line 167, ../sass/screen.scss */
 .pagination > .active > a,
 .pagination > .active > a:hover {
   background-color: #B01C2E;
   border-color: #B01C2E; }
 
-/* line 158, ../sass/screen.scss */
+/* line 172, ../sass/screen.scss */
 .pagination > li > a {
   color: #B01C2E; }
 
-/* line 162, ../sass/screen.scss */
+/* line 176, ../sass/screen.scss */
 #block-mha-news-social-share img {
   float: left;
   margin-right: 10px; }
 
 @media (min-width: 768px) {
-  /* line 169, ../sass/screen.scss */
+  /* line 183, ../sass/screen.scss */
   .navbar-full li {
     float: left !important; } }
-/* line 174, ../sass/screen.scss */
+/* line 188, ../sass/screen.scss */
 .navbar-default {
   border: none;
   background: none; }
 
-/* line 179, ../sass/screen.scss */
+/* line 193, ../sass/screen.scss */
 .view-id-hero_widget .container-fluid {
   background: #B01C2E; }
-/* line 182, ../sass/screen.scss */
+/* line 196, ../sass/screen.scss */
 .view-id-hero_widget .col-md-4 {
   padding-top: 30px;
   color: #fff; }
-  /* line 185, ../sass/screen.scss */
+  /* line 199, ../sass/screen.scss */
   .view-id-hero_widget .col-md-4 a {
     color: #fff;
     font-size: 1.5em; }
+
+/* line 208, ../sass/screen.scss */
+.view-image-gallery .views-bootstrap-grid-plugin-style .views-field-title a {
+  position: absolute;
+  background: #B01C2E;
+  padding: 10px;
+  top: 30px;
+  color: #fff; }
+
+/* line 220, ../sass/screen.scss */
+.view-id-events.view-display-id-page img,
+.view-id-events.view-display-id-page_1 img {
+  float: left;
+  margin-right: 20px; }
+/* line 224, ../sass/screen.scss */
+.view-id-events.view-display-id-page .views-row,
+.view-id-events.view-display-id-page_1 .views-row {
+  margin-top: 20px;
+  padding: 20px 0;
+  border-bottom: 1px solid #ddd;
+  border-top: 1px solid #ddd; }
+/* line 231, ../sass/screen.scss */
+.view-id-events.view-display-id-page .views-field-title a,
+.view-id-events.view-display-id-page_1 .views-field-title a {
+  font-family: Georgia, "Times New Roman", Times, serif;
+  color: #B01C2E;
+  font-size: 1.2em; }
+
+/* line 238, ../sass/screen.scss */
+#block-block-8 {
+  min-height: 20px;
+  padding: 19px;
+  margin-bottom: 20px;
+  background-color: #f5f5f5;
+  border: 1px solid #e3e3e3;
+  border-radius: 4px;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+  padding-top: 0; }
+  /* line 248, ../sass/screen.scss */
+  #block-block-8 p {
+    font-size: 0.9em;
+    margin-top: 1em; }
+  /* line 252, ../sass/screen.scss */
+  #block-block-8 a {
+    font-size: 0.9em; }
