--- a/themes/custom/mha_res/sass/screen.scss
+++ b/themes/custom/mha_res/sass/screen.scss
@@ -32,6 +32,14 @@ body{
     color: #fff;
   }
 }
+.region-sidebar-second{
+  h2.block-title{
+    margin: -19px -19px 0px -19px;
+    background: #B01C2E;
+    padding: 19px;
+    color: #fff;
+  }
+}
 .region-sidebar-first{
   h2.block-title{
     margin: -19px -19px 0px -19px;
@@ -43,6 +51,12 @@ body{
     li{
         padding: 10px 0px;
         border-bottom: 1px #e3e3e3 solid;
+    }
+  }
+  .view-display-id-block_1{
+    .views-row{
+      padding: 10px 0px;
+      border-bottom: 1px #e3e3e3 solid;
     }
   }
 }
@@ -186,5 +200,56 @@ p{
       color: #fff;
       font-size: 1.5em;
     }
+  }
+}
+.view-image-gallery{
+  .views-bootstrap-grid-plugin-style{
+    .views-field-title{
+      a{
+        position: absolute;
+        background: #B01C2E;
+        padding: 10px;
+        top: 30px;
+        color: #fff;
+      }
+    }
+  }
+}
+.view-id-events.view-display-id-page,
+.view-id-events.view-display-id-page_1{
+  img{
+    float: left;
+    margin-right: 20px;
+  }
+  .views-row{
+    margin-top: 20px;
+    padding: 20px 0;
+    border-bottom: 1px solid #ddd;
+    border-top: 1px solid #ddd;
+  }
+  .views-field-title{
+    a{
+      font-family: Georgia, "Times New Roman", Times, serif;
+      color: #B01C2E;
+      font-size: 1.2em;
+    }
+  }
+}
+#block-block-8{
+  min-height: 20px;
+  padding: 19px;
+  margin-bottom: 20px;
+  background-color: #f5f5f5;
+  border: 1px solid #e3e3e3;
+  border-radius: 4px;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.05);
+  box-shadow: inset 0 1px 1px rgba(0,0,0,0.05);
+  padding-top: 0;
+  p{
+    font-size: 0.9em;
+    margin-top: 1em;
+  }
+  a{
+    font-size: 0.9em;
   }
 }
