--- a/themes/custom/mha_res/css/screen.css
+++ b/themes/custom/mha_res/css/screen.css
@@ -277,8 +277,8 @@ p {
   color: #B01C2E;
   font-size: 1.2em; }
 
-/* line 238, ../sass/screen.scss */
-#block-block-8 {
+/* line 239, ../sass/screen.scss */
+.region-sidebar-second .block {
   min-height: 20px;
   padding: 19px;
   margin-bottom: 20px;
@@ -288,10 +288,47 @@ p {
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
   padding-top: 0; }
-  /* line 248, ../sass/screen.scss */
-  #block-block-8 p {
+  /* line 249, ../sass/screen.scss */
+  .region-sidebar-second .block p {
     font-size: 0.9em;
     margin-top: 1em; }
-  /* line 252, ../sass/screen.scss */
-  #block-block-8 a {
+  /* line 253, ../sass/screen.scss */
+  .region-sidebar-second .block a {
     font-size: 0.9em; }
+
+/* line 259, ../sass/screen.scss */
+.view-id-elton_house_award.view-display-id-page img {
+  float: left;
+  margin-right: 20px; }
+/* line 263, ../sass/screen.scss */
+.view-id-elton_house_award.view-display-id-page .views-row {
+  padding: 20px 0;
+  border-top: 1px solid #ddd; }
+/* line 268, ../sass/screen.scss */
+.view-id-elton_house_award.view-display-id-page .view-content h3 {
+  font-family: Georgia, "Times New Roman", Times, serif;
+  color: #B01C2E;
+  font-size: 1.5em;
+  margin-top: 20px; }
+/* line 275, ../sass/screen.scss */
+.view-id-elton_house_award.view-display-id-page .view-content .views-field-title h3 {
+  font-size: 1.2em; }
+/* line 279, ../sass/screen.scss */
+.view-id-elton_house_award.view-display-id-page .view-content .views-row-first {
+  margin-top: 20px; }
+/* line 282, ../sass/screen.scss */
+.view-id-elton_house_award.view-display-id-page .view-content .views-field-body {
+  padding-top: 1em; }
+
+/* line 287, ../sass/screen.scss */
+strong {
+  font-weight: bold; }
+
+/* line 291, ../sass/screen.scss */
+.node-elton-house-award-recipient .field-name-field-course {
+  font-weight: bold;
+  margin-bottom: 1em; }
+/* line 295, ../sass/screen.scss */
+.node-elton-house-award-recipient .field-type-image {
+  float: left;
+  margin-right: 20px; }
