--- a/themes/custom/mha_res/sass/screen.scss
+++ b/themes/custom/mha_res/sass/screen.scss
@@ -235,21 +235,65 @@ p{
     }
   }
 }
-#block-block-8{
-  min-height: 20px;
-  padding: 19px;
-  margin-bottom: 20px;
-  background-color: #f5f5f5;
-  border: 1px solid #e3e3e3;
-  border-radius: 4px;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.05);
-  box-shadow: inset 0 1px 1px rgba(0,0,0,0.05);
-  padding-top: 0;
-  p{
-    font-size: 0.9em;
-    margin-top: 1em;
+.region-sidebar-second{
+  .block{
+    min-height: 20px;
+    padding: 19px;
+    margin-bottom: 20px;
+    background-color: #f5f5f5;
+    border: 1px solid #e3e3e3;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.05);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,0.05);
+    padding-top: 0;
+    p{
+      font-size: 0.9em;
+      margin-top: 1em;
+    }
+    a{
+      font-size: 0.9em;
+    }
   }
-  a{
-    font-size: 0.9em;
+}
+.view-id-elton_house_award.view-display-id-page{
+  img{
+    float: left;
+    margin-right: 20px;
+  }
+  .views-row{
+    padding: 20px 0;
+    border-top: 1px solid #ddd;
+  }
+  .view-content{
+    h3{
+      font-family: Georgia, "Times New Roman", Times, serif;
+      color: #B01C2E;
+      font-size: 1.5em;
+      margin-top: 20px;
+    }
+    .views-field-title{
+      h3{
+        font-size: 1.2em;
+      }
+    }
+    .views-row-first{
+      margin-top: 20px;
+    }
+    .views-field-body{
+      padding-top: 1em;
+    }
+  }
+}
+strong{
+  font-weight: bold;
+}
+.node-elton-house-award-recipient{
+  .field-name-field-course{
+    font-weight: bold;
+    margin-bottom: 1em;
+  }
+  .field-type-image{
+    float: left;
+    margin-right: 20px;
   }
 }
